# partitioned-smc

./: Cargo.toml  example.dfa
src/: automata.rs  bdd.rs  cav00.rs  command.rs  liveness.rs  ltl.rs  main.rs  reachable.rs  safety.rs  traditional.rs  util.rs  worker.rs
src/cav00/: mod.rs  other.rs  slice.rs  worker.rs
src/partitioned/: fair.rs  mod.rs  reachable.rs  statistic.rs  worker.rs
