[package]
name = "partitioned-smc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aig = { path = "../aig-rs" }
nom = "7.1.3"
smv = { path = "../smv-rs" }
logic-form = { path = "../logic-form" }
cudd = { path = "../cudd-rs" }
peabody = { path = "../peabody" }
